Refacto + cleanup. Now code works for all tested datasets

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -117,7 +117,9 @@
   {
    "cell_type": "markdown",
    "id": "90bc3d35-72f1-4fc8-a452-e0699b4d507d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Prediction ahead\n",
     "\n",
@@ -148,7 +150,6 @@
    "metadata": {
     "collapsed": false,
     "editable": true,
-    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -176,7 +177,7 @@
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "name = \"JapaneseVowels\"\n",
+    "name = \"HAART\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train, X_test, Y_train, Y_test, X_pretrain = load_dataset_classification(name)"
    ]
@@ -219,14 +220,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "01e57e07-e48c-4e28-80e9-ad95894d0a2e",
-   "metadata": {},
-   "source": [
-    "### Spectral density and peak selection"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "380ad0f4-4dbc-4b97-8d28-8ffb357715d7",
@@ -248,6 +241,7 @@
     "else:\n",
     "    filtered_peak_freqs = extract_peak_frequencies(X_pretrain, sampling_rate, threshold=1e-5, nperseg=1024, visualize=True)\n",
     "\n",
+    "#print(\"Filtered peak frequencies: \", filtered_peak_freqs)\n",
     "print(\"Number of frequencies selected :\", len(filtered_peak_freqs))"
    ]
   },
@@ -423,7 +417,6 @@
     "ax[0].plot(range(DIFF), filtered_data[NB_1, START:END], label='Time serie')\n",
     "ax[0].plot(range(DIFF), ma[NB_1, START:END], label='Moving average')\n",
     "ax[0].legend(fontsize=26)\n",
-    "print(np.max(filtered_data[NB_1,:]))\n",
     "\n",
     "NB_2 = 2\n",
     "ax[1].plot(range(DIFF), filtered_data[NB_2, START:END], label='Time serie')\n",
@@ -591,6 +584,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b49a01ef-7b49-4493-aa96-3ea65b18b118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define noise parameter\n",
+    "noise_std = 0.001\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f28bdfbc-ffc7-465b-bc6e-230769d87199",
    "metadata": {},
@@ -605,9 +609,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define noise parameter\n",
-    "noise_std = 0.005\n",
-    "\n",
     "# PRETRAIN\n",
     "filtered_data_noisy = []\n",
     "for instance in filtered_data:\n",
@@ -629,17 +630,17 @@
     "\n",
     "# We create an array of the same shape as X_pretrain_band but with the same time serie repeated K times\n",
     "X_pretrain_multi = TwoDimArrayWrapper(np.repeat(filtered_data, K, axis=0)) # filtered_data_noisy or filtered_data\n",
+    "X_pretrain_multi_noisy = TwoDimArrayWrapper(np.repeat(filtered_data_noisy, K, axis=0)) # filtered_data_noisy or filtered_data\n",
     "\n",
     "if not is_multivariate:\n",
-    "    X_pretrain_uni = X_pretrain.flatten() # X_pretrain_noisy or X_pretrain"
+    "    X_pretrain_uni = X_pretrain.flatten() # X_pretrain_noisy or X_pretrain\n",
+    "    X_pretrain_uni_noisy = X_pretrain_noisy.flatten() # X_pretrain_noisy or X_pretrain"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b8fae4bd-9b8e-4eca-a8bb-e2daffaf732b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### For classification"
    ]
@@ -724,8 +725,7 @@
     "    for ts in X_test_band:\n",
     "        # Add noise to the time series\n",
     "        X_test_band_noisy.append(ts + np.random.normal(loc=0, scale=noise_std, size=ts.shape))\n",
-    "    X_test_band_noisy = np.array(X_test_band_noisy)\n",
-    "    \n"
+    "    X_test_band_noisy = np.array(X_test_band_noisy)\n"
    ]
   },
   {
@@ -816,8 +816,7 @@
     "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.bounded_hadsp import run_hadsp_algorithm\n",
     "from connexion_generation.desp import run_desp_algorithm\n",
-    "import connexion_generation.desp\n",
-    "reload(connexion_generation.desp)\n",
+    "\n",
     "input_connectivity = 1\n",
     "connectivity = 0\n",
     "\n",
@@ -834,16 +833,6 @@
     "    sr = max(abs(eigen))\n",
     "    \n",
     "    return Win, W, bias, connectivity, sr, state_history\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3307a36d-8400-45fd-ab87-287fdb246f0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_pretrain_multi.shape"
    ]
   },
   {
@@ -878,7 +867,7 @@
     " bias_hadsp_multi, \n",
     " connectivity_band, \n",
     " sr_hadsp_multi, \n",
-    " state_history_hadsp_multi) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_multi)\n",
+    " state_history_hadsp_multi) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_multi_noisy)\n",
     "\n",
     "# random + multi\n",
     "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, sr_hadsp_multi)\n",
@@ -888,7 +877,10 @@
     "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "sr_random_multi = max(abs(eigen_random_multi))\n",
     "\n",
-    "heatmap(W_hadsp_multi.todense(), cmap=color_palette(\"cividis\", as_cmap=True))"
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
+    "heatmap(W_random_multi.todense(), cmap=custom_colormap, cbar=True)"
    ]
   },
   {
@@ -929,7 +921,7 @@
     "     bias_hadsp_uni, \n",
     "     connectivity_hadsp_uni, \n",
     "     sr_hadsp_uni,\n",
-    "     state_history_hadsp_uni) = initialise_and_train(input_scaling, n,  input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_uni)\n",
+    "     state_history_hadsp_uni) = initialise_and_train(input_scaling, n,  input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_uni_noisy)\n",
     "    \n",
     "    # random + uni\n",
     "    Win_normal, W_normal, bias_normal =  init_matrices(n, 1, connectivity_hadsp_uni, sr_hadsp_uni)\n",
@@ -939,7 +931,10 @@
     "    eigen_normal = sparse.linalg.eigs(W_normal, k=1, which=\"LM\", maxiter=W_normal.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "    sr_normal = max(abs(eigen_normal))\n",
     "    \n",
-    "    heatmap(W_hadsp_uni.todense(), cmap=color_palette(\"cividis\", as_cmap=True))\n"
+    "    from matplotlib.colors import ListedColormap\n",
+    "    \n",
+    "    custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
+    "    heatmap(W_hadsp_uni.todense(), cmap=custom_colormap, cbar=True)"
    ]
   },
   {
@@ -1019,9 +1014,7 @@
   {
    "cell_type": "markdown",
    "id": "e27380a6-3976-442d-8bb0-34bfc142985a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Classification"
    ]
@@ -1069,18 +1062,16 @@
    },
    "outputs": [],
    "source": [
-    "import performances.esn_model_evaluation\n",
-    "reload(performances.esn_model_evaluation)\n",
-    "from performances.esn_model_evaluation import init_train_and_predict_model_for_classification, compute_score\n",
+    "from performances.esn_model_evaluation import init_and_train_model_for_classification\n",
     "# To remember : \n",
     "#  For reservoirpy   pre_s = W @ r + Win @ (u + noise_gen(dist=dist, shape=u.shape, gain=g_in)) + bias\n",
     "\n",
     "train_data_multi = X_train_band_duplicated # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
     "test_data_multi = X_test_band_noisy_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
     "\n",
-    "Y_pred_hadsp_multi = init_train_and_predict_model_for_classification(W_hadsp_multi, Win_hadsp_multi, bias_hadsp_multi, activation_function, RIDGE_COEF, train_data_multi, test_data_multi, Y_train, N_JOBS)\n",
+    "reservoir_hadsp_multi, readout_hadsp_multi = init_and_train_model_for_classification(W_hadsp_multi, np.diag(Win_hadsp_multi.A.T[0]), bias_hadsp_multi, activation_function, RIDGE_COEF, train_data_multi, Y_train, N_JOBS)\n",
     "\n",
-    "Y_pred_random_multi = init_train_and_predict_model_for_classification(W_random_multi, Win_random_multi, bias_random_multi, activation_function, RIDGE_COEF, train_data_multi, test_data_multi, Y_train, N_JOBS)\n"
+    "reservoir_random_multi, readout_random_multi = init_and_train_model_for_classification(W_random_multi, np.diag(Win_random_multi.A.T[0]), bias_random_multi, activation_function, RIDGE_COEF, train_data_multi, Y_train, N_JOBS)\n"
    ]
   },
   {
@@ -1090,8 +1081,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from performances.esn_model_evaluation import predict_model_for_classification, compute_score\n",
+    "\n",
+    "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, N_JOBS)\n",
     "score = compute_score(Y_pred_hadsp_multi, Y_test, \"HADSP multi\")\n",
     "\n",
+    "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
     "score = compute_score(Y_pred_random_multi, Y_test, \"random multi\")"
    ]
   },
@@ -1134,9 +1129,9 @@
    "outputs": [],
    "source": [
     "if not is_multivariate:\n",
-    "    Y_pred_hadsp_uni = init_train_and_predict_model_for_classification(W_hadsp_uni, Win_hadsp_uni, bias_hadsp_uni, activation_function, RIDGE_COEF, train_data_uni, test_data_uni, Y_train, N_JOBS)\n",
+    "    Y_pred_hadsp_uni = init_and_train_model_for_classification(W_hadsp_uni, Win_hadsp_uni, bias_hadsp_uni, activation_function, RIDGE_COEF, train_data_uni, Y_train, N_JOBS)\n",
     "    \n",
-    "    Y_pred_normal = init_train_and_predict_model_for_classification(W_normal, Win_normal, bias_normal, activation_function, RIDGE_COEF, train_data_uni, test_data_uni, Y_train, N_JOBS)"
+    "    Y_pred_normal = init_and_train_model_for_classification(W_normal, Win_normal, bias_normal, activation_function, RIDGE_COEF, train_data_uni, Y_train, N_JOBS)"
    ]
   },
   {
@@ -1147,15 +1142,19 @@
    "outputs": [],
    "source": [
     "if not is_multivariate:\n",
+    "    Y_pred_hadsp_uni = predict_model_for_classification(reservoir_hadsp_uni, readout_hadsp_uni, test_data_uni, N_JOBS)\n",
     "    score = compute_score(Y_pred_hadsp_uni, Y_test, \"HADSP uni\")\n",
-    "\n",
+    "    \n",
+    "    Y_pred_normal = predict_model_for_classification(reservoir_random_uni, readout_random_uni, test_data_uni, N_JOBS)\n",
     "    score = compute_score(Y_pred_normal, Y_test, \"random uni\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5dc7ab1a-e020-489a-8ff9-9bbd689de15e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Prediction ahead"
    ]
@@ -1183,41 +1182,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ac702f-a2a8-418a-ba30-0ec4e880d59a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not is_multivariate:\n",
-    "    fig, ax = plt.subplots(figsize=(16,5))\n",
-    "    ax.plot(range(500), X_test_noisy[:500])\n",
-    "    ax.plot(range(500), Y_test[:500], c=\"orange\")\n",
-    "    ax.spines['top'].set_visible(False)\n",
-    "    ax.spines['right'].set_visible(False)\n",
-    "    ax.tick_params(axis='both', labelsize=20)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9cb3cff-f820-45a1-af49-698ac7fafa80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(16,5))\n",
-    "for i in range(3):  # Just plot the first 5 features for clarity\n",
-    "    ax.plot(range(200), X_test_band_noisy[i*K][0:200], label=f'Feature {i}')\n",
-    "ax.plot(range(200), Y_test[:200], label=\"Prediction\")\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
-    "ax.tick_params(axis='both', labelsize=20)\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6b6d45a7-49c9-4e1e-a473-652bc90d64eb",
    "metadata": {},
    "outputs": [],
@@ -1226,8 +1190,8 @@
     "combined_data = np.concatenate((X_train_band, X_test_band), axis=1)\n",
     "\n",
     "# noisy version\n",
-    "combined_data_noisy = np.concatenate((X_train_band_noisy, X_test_band_noisy), axis=1)\n",
-    "\n",
+    "combined_data_noisy = np.concatenate((X_train_band, X_test_band_noisy), axis=1)\n",
+    "combined_Y =np.concatenate((Y_train, Y_test), axis=0)\n",
     "\n",
     "# Calculate the merge point index\n",
     "merge_point_index = len(X_train_band[0])\n",
@@ -1238,9 +1202,10 @@
     "\n",
     "# Plot for a subset N features within a range arround transition from train to test\n",
     "N = 3\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "for i in range(N): \n",
-    "    plt.plot(range(start_index, end_index), combined_data_noisy[i*K, start_index:end_index], label=f'Feature {i}')\n",
+    "plt.figure(figsize=(16, 5))\n",
+    "for i in [63, 478, 873]: \n",
+    "    plt.plot(range(start_index, end_index), combined_data_noisy[i, start_index:end_index], label=f'Feature {i}')\n",
+    "plt.plot(range(start_index, end_index), combined_Y[start_index:end_index], label=\"Prediction\")\n",
     "plt.title('Feature Values Around Merge Point')\n",
     "plt.xlabel('Sample Index')\n",
     "plt.ylabel('Feature Value')\n",
@@ -1264,8 +1229,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import performances.esn_model_evaluation\n",
-    "reload(performances.esn_model_evaluation)\n",
     "from performances.esn_model_evaluation import init_and_train_model_for_prediction\n",
     "\n",
     "if not is_multivariate:\n",
@@ -1284,7 +1247,6 @@
     "\n",
     "# Training output HASDP + bandfilter\n",
     "reservoir_hadsp_multi, readout_hadsp_multi = init_and_train_model_for_prediction(W_hadsp_multi, np.diag(Win_hadsp_multi.A.T[0]), bias_hadsp_multi, activation_function, RIDGE_COEF, train_data_multi, Y_train)\n",
-    "\n",
     "                                                                                   "
    ]
   },
@@ -1307,16 +1269,15 @@
    "outputs": [],
    "source": [
     "from reservoir.reservoir import run\n",
-    "from reservoir.reservoirpy_util import plot_results\n",
     "\n",
     "if not is_multivariate:\n",
     "    test_data_uni = X_test_noisy # X_test_noisy or X_test\n",
     "\n",
     "    # Prediction for random + MG\n",
-    "    y_pred_random_uni = run(W_normal, Win_normal, bias_normal, Wout_normal, test_data_uni, activation_function, b_out_normal, last_state_normal)\n",
-    "    \n",
+    "    y_pred_random_uni = readout_random_uni.run(reservoir_random_uni.run(test_data_uni, reset=False)) \n",
+    "\n",
     "    # Prediction for HADSP + MG\n",
-    "    y_pred_hadsp_uni = run(W_hadsp_uni, Win_hadsp_uni, bias_hadsp_uni, Wout_hadsp_uni, test_data_uni, activation_function, b_out_hadsp_uni, last_state_hadsp_uni)\n",
+    "    y_pred_hadsp_uni = readout_hadsp_uni.run(reservoir_hadsp_uni.run(test_data_uni, reset=False)) \n",
     "\n",
     "test_data_multi = X_test_band_noisy.T # X_test_band_noisy or test_band_inputs\n",
     "\n",
@@ -1324,8 +1285,7 @@
     "y_pred_random_multi = readout_random_multi.run(reservoir_random_multi.run(test_data_multi, reset=False)) \n",
     "\n",
     "# Prediction for HADSP + bandfilter\n",
-    "y_pred_hadsp_multi = readout_hadsp_multi.run(reservoir_hadsp_multi.run(test_data_multi, reset=False)) \n",
-    "\n"
+    "y_pred_hadsp_multi = readout_hadsp_multi.run(reservoir_hadsp_multi.run(test_data_multi, reset=False)) \n"
    ]
   },
   {
@@ -1337,14 +1297,12 @@
    },
    "outputs": [],
    "source": [
-    "import reservoir.reservoirpy_util\n",
-    "reload(reservoir.reservoirpy_util)\n",
-    "from reservoir.reservoirpy_util import plot_results\n",
+    "from plots.performances import plot_results\n",
     "from reservoir.losses import nrmse, nrmse_multivariate\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "END_STEP = 1000\n",
-    "START_STEP = 0\n",
+    "END_STEP = 500\n",
+    "START_STEP = 100\n",
     "slice_range = slice(START_STEP, END_STEP)\n",
     "\n",
     "if not is_multivariate:\n",
@@ -1353,7 +1311,7 @@
     "print(\"nrmse random + band  :\", float(nrmse_multivariate(Y_test[slice_range], y_pred_random_multi[slice_range])))\n",
     "print(\"nrmse hadsp + band   :\", float(nrmse_multivariate(Y_test[slice_range], y_pred_hadsp_multi[slice_range])))\n",
     "\n",
-    "plot_results(y_pred_hadsp_multi, Y_test, 0, 300)"
+    "plot_results(y_pred_hadsp_multi, Y_test, 0, 300)\n"
    ]
   },
   {
@@ -1364,20 +1322,18 @@
    "outputs": [],
    "source": [
     "# moving average of the y\n",
-    "\n",
-    "span=10\n",
+    "span=5\n",
     "pad_width = span // 2\n",
-    "\n",
     "\n",
     "ave_y_random_uni = np.convolve(np.pad(y_pred_random_uni.flatten(), pad_width, mode='edge'), np.ones(span), 'valid') / span\n",
     "ave_y_hadsp_uni = np.convolve(np.pad(y_pred_hadsp_uni.flatten(), pad_width, mode='edge') , np.ones(span), 'valid') / span\n",
     "ave_y_random_multi = np.convolve(np.pad(y_pred_random_multi.flatten(), pad_width, mode='edge'), np.ones(span), 'valid') / span\n",
     "ave_y_hadsp_multi = np.convolve(np.pad(y_pred_hadsp_multi.flatten(), pad_width, mode='edge'), np.ones(span), 'valid') / span\n",
     "\n",
-    "print(\"nrmse normal         :\", float(nrmse(Y_test[:TIME_STEPS], ave_y_random_uni[:TIME_STEPS])))\n",
-    "print(\"nrmse hadsp          :\", float(nrmse(Y_test[:TIME_STEPS], ave_y_hadsp_uni[:TIME_STEPS])))\n",
-    "print(\"nrmse random + band  :\", float(nrmse(Y_test[:TIME_STEPS], ave_y_random_multi[:TIME_STEPS])))\n",
-    "print(\"nrmse hadsp + band   :\", float(nrmse(Y_test[:TIME_STEPS], ave_y_hadsp_multi[:TIME_STEPS])))\n",
+    "print(\"nrmse normal         :\", float(nrmse(Y_test[slice_range], ave_y_random_uni[slice_range])))\n",
+    "print(\"nrmse hadsp          :\", float(nrmse(Y_test[slice_range], ave_y_hadsp_uni[slice_range])))\n",
+    "print(\"nrmse random + band  :\", float(nrmse(Y_test[slice_range], ave_y_random_multi[slice_range])))\n",
+    "print(\"nrmse hadsp + band   :\", float(nrmse(Y_test[slice_range], ave_y_hadsp_multi[slice_range])))\n",
     " \n",
     "plot_results(ave_y_hadsp_multi.reshape(-1,1), Y_test, 300)"
    ]
